deploy/kubernetes/with-ingress/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nanomon-api
spec:
  selector:
    matchLabels:
      app: nanomon-api
  template:
    metadata:
      labels:
        app: nanomon-api
    spec:
      containers:
        - name: nanomon-api
          image: ghcr.io/benc-uk/nanomon-api:dev
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nanomon-api
spec:
  selector:
    app: nanomon-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
