deploy/kubernetes/with-ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nanomon-front
spec:
  selector:
    matchLabels:
      app: nanomon-front
  template:
    metadata:
      labels:
        app: nanomon-front
    spec:
      containers:
        - name: nanomon-front
          image: ghcr.io/benc-uk/nanomon-frontend:dev
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: nanomon-front
spec:
  selector:
    app: nanomon-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
