deploy/kubernetes/with-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanomon
  labels:
    name: nanomon
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - nanomon.kube.benco.io
    secretName: benco-io-cert
  rules:
  - host: nanomon.kube.benco.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nanomon-front
            port: 
              number: 8001
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: nanomon-api
            port: 
              number: 8000
